# fabrica_celeste

./: CMakeLists.txt  README.md
fabrica/: debug.h  error.c  error.h  main.c
fabrica/file_io/: image.c  image.h  read_file.c  read_file.h
fabrica/math/: mat4f.c  mat4f.h  quaternionf.c  quaternionf.h  vec3f.c  vec3f.h
fabrica/memory/: allocator.h  free.h  malloc.h  realloc.h
fabrica/renderer/: camera.c  camera.h  chunk_mesh.c  chunk_mesh.h  chunk_renderer.c  chunk_renderer.h  gl.h  renderer.c  renderer.h  shaders.c  shaders.h  texture.c  texture.h  texture_atlas.c  texture_atlas.h  voxel_renderer.c  voxel_renderer.h
fabrica/world/: block.c  block.h  chunk.c  chunk.h  world.c  world.h
shaders/: chunk.frag  chunk.vert  textured.frag  textured.vert
